--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -42,3 +42,12 @@ azure-storage-blob>=12.17.0
 # Monitoring and alerting
 prometheus-client>=0.17.0
 grafana-api>=1.0.3
+
+# RAG and LLM dependencies
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-community>=0.0.20
+chromadb>=0.4.22
+openai>=1.12.0
+tiktoken>=0.5.2
+python-dotenv>=1.0.0
