--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,53 +1,182 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
-plotly>=5.15.0
-matplotlib>=3.7.0
-vaderSentiment>=3.3.2
-textblob>=0.17.1
-nltk>=3.8.1
-scikit-learn>=1.3.0
-seaborn>=0.12.0
-scipy>=1.11.0
-
-# New Phase 4 dependencies
-statsmodels>=0.14.0
-reportlab>=4.0.0
-openpyxl>=3.1.0
-
-# Twitter API integration
-tweepy>=4.14.0
-
-# Real-time data source dependencies
-requests>=2.31.0
-aiohttp>=3.8.0
-websockets>=11.0.0
-asyncio-mqtt>=0.13.0
-redis>=4.5.0
-
-# Database connectors
-psycopg2-binary>=2.9.0
-pymysql>=1.1.0
-
-# Additional API support
-slack-sdk>=3.21.0
-discord.py>=2.3.0
-python-telegram-bot>=20.0
-
-# Cloud storage
-boto3>=1.28.0
-google-cloud-storage>=2.10.0
-azure-storage-blob>=12.17.0
-
-# Monitoring and alerting
-prometheus-client>=0.17.0
-grafana-api>=1.0.3
-
-# RAG and LLM dependencies
-langchain>=0.1.0
-langchain-openai>=0.0.5
-langchain-community>=0.0.20
-chromadb>=0.4.22
-openai>=1.12.0
-tiktoken>=0.5.2
-python-dotenv>=1.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
+async-timeout==5.0.1
+asyncio-mqtt==0.16.2
+attrs==25.4.0
+azure-core==1.35.1
+azure-storage-blob==12.26.0
+backoff==2.2.1
+bcrypt==5.0.0
+blinker==1.9.0
+boto3==1.40.50
+botocore==1.40.50
+build==1.3.0
+cachetools==6.2.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+chromadb==1.1.1
+click==8.3.0
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.3.3
+cryptography==46.0.2
+cycler==0.12.1
+dataclasses-json==0.6.7
+discord.py==2.6.4
+distro==1.9.0
+durationpy==0.10
+et_xmlfile==2.0.0
+filelock==3.20.0
+flatbuffers==25.9.23
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-api-core==2.26.0
+google-auth==2.41.1
+google-cloud-core==2.4.3
+google-cloud-storage==3.4.1
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grafana-api==1.0.3
+greenlet==3.2.4
+grpcio==1.75.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.35.3
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+isodate==0.7.2
+Jinja2==3.1.6
+jiter==0.11.0
+jmespath==1.0.1
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
+kubernetes==34.1.0
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.79
+langchain-openai==0.3.35
+langchain-text-splitters==0.3.11
+langsmith==0.4.35
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+matplotlib==3.10.7
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+narwhals==2.7.0
+nltk==3.9.2
+numpy==2.3.3
+oauthlib==3.3.1
+onnxruntime==1.23.1
+openai==2.3.0
+openpyxl==3.1.5
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
+orjson==3.11.3
+overrides==7.7.0
+packaging==25.0
+paho-mqtt==2.1.0
+pandas==2.3.3
+patsy==1.0.1
+pillow==11.3.0
+pip==25.2
+plotly==6.3.1
+posthog==5.4.0
+prometheus_client==0.23.1
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==6.32.1
+psycopg2-binary==2.9.11
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
+pycparser==2.23
+pydantic==2.12.2
+pydantic_core==2.41.4
+pydantic-settings==2.11.0
+pydeck==0.9.1
+Pygments==2.19.2
+PyMySQL==1.1.2
+pyparsing==3.2.5
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-telegram-bot==22.5
+pytz==2025.2
+PyYAML==6.0.3
+redis==6.4.0
+referencing==0.36.2
+regex==2025.9.18
+reportlab==4.4.4
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.2.0
+rpds-py==0.27.1
+rsa==4.9.1
+s3transfer==0.14.0
+scikit-learn==1.7.2
+scipy==1.16.2
+seaborn==0.13.2
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+slack_sdk==3.37.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+statsmodels==0.14.5
+streamlit==1.50.0
+sympy==1.14.0
+tenacity==9.1.2
+textblob==0.19.0
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+tokenizers==0.22.1
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+tweepy==4.16.0
+typer==0.19.2
+typing_extensions==4.15.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+tzdata==2025.2
+urllib3==2.3.0
+uvicorn==0.37.0
+vaderSentiment==3.3.2
+watchdog==6.0.0
+watchfiles==1.1.1
+websocket-client==1.9.0
+websockets==15.0.1
+yarl==1.22.0
+zipp==3.23.0
+zstandard==0.25.0
